webfiles/css/sass/layouts/sections/_jvAndTcg.scss
#jv-and-tcg {

    p,
    p+ul {
        padding: 0 1.25rem;
    }

    P+ul {
        display: flex;
        margin-top: 2rem;
        margin-bottom: 2rem;

        ul {
            padding-left: 1rem;

            li {
                list-style-type: disc;
            }
        }

        #secondList {
            margin-left: 4rem;
        }
    }

    img {
        max-width: 400px;
        width: 50%;
    }

    div {
        display: flex;
        align-items: center;

        &:first-of-type {

            margin-bottom: 3rem;

            article {
                margin-left: 2.5rem;
            }
        }

        &:last-of-type {

            flex-direction: row-reverse;

            article {
                margin-left: 0;
                margin-right: 2.5rem;
            }
        }
    }
}

@media screen and (max-width: 615px) {
    .jv-contests {
        flex-direction: column;
        gap: 2rem;
    }

    .tcg-contests {
        img {
            display: none;
        }
    }

    #jv-and-tcg div:first-of-type article,
    #jv-and-tcg div:last-of-type article {
        margin: 0;
    }
}

